# Ramalingam_Cell_2019

./: CITATION.cff  README.md
analysis/revision_analysis/meme-5.0.5/doc/examples/: Makefile  Makefile.am  Makefile.in  create_examples  create_examples.pl.in  examples.mk
analysis/revision_analysis/meme-5.0.5/doc/examples/ame_example_output_files/: ame.html  ame.tsv
analysis/revision_analysis/meme-5.0.5/doc/examples/centrimo_example_output_files/: centrimo.html  centrimo.tsv
analysis/revision_analysis/meme-5.0.5/doc/examples/cismapper_example_output_files/: HistLev.H3k27ac.tsv  HistLev.H3k4me3.tsv  TrEx.tsv  build_map_msgs.txt  cismapper.html  gene_elements.tsv  gene_targets.tsv  links.tsv  progress_log.txt  tss_elements.tsv  tss_targets.tsv
analysis/revision_analysis/meme-5.0.5/doc/examples/compute_prior_dist_example_output_files/: Makefile  Makefile.in
analysis/revision_analysis/meme-5.0.5/doc/examples/dreme_example_output_files/: dreme.html  dreme.txt  dreme.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/fimo_example_output_files/: fimo.html  fimo.tsv  fimo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/glam2_example_output_files/: logo1.eps  logo10.eps  logo2.eps  logo3.eps  logo4.eps  logo5.eps  logo6.eps  logo7.eps  logo8.eps  logo9.eps  logo_ssc1.eps  logo_ssc10.eps  logo_ssc2.eps  logo_ssc3.eps  logo_ssc4.eps  logo_ssc5.eps  logo_ssc6.eps  logo_ssc7.eps  logo_ssc8.eps  logo_ssc9.eps
analysis/revision_analysis/meme-5.0.5/doc/examples/gomo_example_output_files/: gomo.html  gomo.tsv  gomo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/mast_example_output_files/: mast.html  mast.txt  mast.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/mcast_example_output_files/: cisml.xml  mcast.gff  mcast.html  mcast.tsv  mcast.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/meme_example_output_files/: logo1.eps  logo2.eps  logo3.eps  logo_rc1.eps  logo_rc2.eps  logo_rc3.eps  meme.html  meme.txt  meme.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/: meme-chip.html  motif_alignment.txt  progress_log.txt  summary.tsv
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/centrimo_out/: centrimo.html  centrimo.tsv
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/dreme_out/: dreme.html  dreme.txt  dreme.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/dreme_tomtom_out/: tomtom.html  tomtom.tsv  tomtom.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/fimo_out_1/: fimo.html  fimo.tsv  fimo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/fimo_out_2/: fimo.html  fimo.tsv  fimo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/fimo_out_3/: fimo.html  fimo.tsv  fimo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/fimo_out_4/: fimo.html  fimo.tsv  fimo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/fimo_out_5/: fimo.html  fimo.tsv  fimo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/fimo_out_6/: fimo.html  fimo.tsv  fimo.xml
analysis/revision_analysis/meme-5.0.5/doc/examples/memechip_example_output_files/meme_out/: logo1.eps  logo2.eps  logo3.eps  (+6 more)
analysis/revision_analysis/meme-5.0.5/doc/examples/momo_example_output_files/: momo.html  momo.tsv  momo.txt
analysis/revision_analysis/meme-5.0.5/doc/examples/sample_opal_scripts/: Makefile  Makefile.in
analysis/revision_analysis/meme-5.0.5/doc/examples/spamo_example_output_files/: spamo.html  spamo.tsv
analysis/revision_analysis/meme-5.0.5/doc/examples/tomtom_example_output_files/: tomtom.html  tomtom.tsv  tomtom.xml
analysis/revision_analysis/meme-5.0.5/src/cismapper_mono/: Makefile  Makefile.am  Makefile.in
analysis/revision_analysis/meme-5.0.5/src/cismapper_mono/Analyses/: BaseAnalysis.cs  BaseData.cs  BaseMapData.cs  BrowserTrackFromMap.cs  ChIPSeqPeakBias.cs  ConvertContactsToMap.cs  ConvertMapToGenes.cs  ConvertMapToScoredRegionPairs.cs  CorrelationMapBuilder.cs  CorrelationMapEligibleGenes.cs  IAnalysisExecutor.cs  MapBuilder.cs  MapFilter.cs  MapStats.cs  MergeCorrelationAndNullMaps.cs  NullMapBuilder.cs  PredictElements.cs  PredictLinks.cs  PredictTargets.cs  PredictionBase.cs
analysis/revision_analysis/meme-5.0.5/src/cismapper_mono/CisMapper/: AssemblyInfo.cs  MainClass.cs
analysis/revision_analysis/meme-5.0.5/src/cismapper_mono/Data/: AxisDescription.cs  Calculations.cs  FactorDescription.cs  Functions.cs  OutputFiles.cs  PlotDescription.cs  Plots.cs  R.cs  Regression.cs  Stats.cs  Tables.cs
analysis/revision_analysis/meme-5.0.5/src/cismapper_mono/Genomics/: Alphabets.cs  BedExpressionFile.cs  BedFile.cs  CuffDiffFile.cs  FastqEntry.cs  FastqParser.cs  Genomics.cs  GtfExpressionFile.cs  GtfGencodeFile.cs  GtfLinkingFile.cs  IAnnotation.cs  IExpressionData.cs  JunctionFile.cs  KmerCollection.cs  LocusRegulatoryMap.cs  MapLink.cs  MapLinkFilter.cs  RegulatoryMap.cs  TRFScorer.cs  TssRegulatoryMap.cs
analysis/revision_analysis/meme-5.0.5/src/cismapper_mono/Shared/: Args.cs  Base.cs  ConfigBase.cs  ITaskExecutor.cs  IUnknown.cs  RegressionConfig.cs
analysis/revision_analysis/meme-5.0.5/src/cismapper_mono/Tools/: RegressionHelpers.R  Stats.cs  Utilities.cs
(+906 files in other folders)
